fixed tab/shift+tab and focus

--- a/src/components/time-picker/time-picker.st.css
+++ b/src/components/time-picker/time-picker.st.css
@@ -83,7 +83,7 @@
     -st-extends: Stepper;
     height: 100%;
     transition: opacity 100ms ease;
-    /*opacity: 0;*/
+    opacity: 0;
 }
 .root:focus .stepper,
 .root:hover .stepper {
